--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 Day days">
-  <meta name="author" content="KISHORE S">
+  <meta name="author" content="KISHORE ">
     </head>
 
     <body>
